# DualBootPatcher

./: CMakeLists.txt
cmake/: ConfigDesktop.cmake
libmbsign/: Android.static.include.mk.in  Android.static.mk.in  CMakeLists.txt
libmbsign/include/mbsign/: mbsign.h
libmbsign/src/: mbsign.cpp
libmbsign/tests/: test_sign.cpp
